kubernetes-examples/appvia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
  labels:
    app: podinfo
spec:
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
      - name: podinfo-container
        image: stefanprodan/podinfo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9898
