kubernetes-examples/appvia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app.kubernetes.io/name: my-podinfo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 9898
